final site for now

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,9 +10,9 @@ EMAIL: nichok3@uci.edu
   <meta charset="utf-8">
   <meta name="author" content="Nicholas Kim">
   <meta name="description" content="CV">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="icon" href="../images/cat_favicon.png" type="image/icon type">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
+  <link rel="stylesheet" type="text/css" href="../css/header.css">
+  <link rel="icon" href="../images/cat_favicon.png">
   <title>Nicholas Kim Contact</title>
 </head>
 <body>
