changed navbar resumer to CV

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ EMAIL: nichok3@uci.edu
   <meta charset="utf-8">
   <meta name="author" content="Nicholas Kim">
   <meta name="description" content="Home page">
-  <link rel="stylesheet" type="text/css" href="css/style.css"/>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="icon" href="images/speak_no_evil.png" type="image/icon type">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/header.css">
+  <link rel="icon" href="images/speak_no_evil.png">
   <title>Nicholas Kim</title>
 </head>
 <body>
@@ -20,16 +20,16 @@ EMAIL: nichok3@uci.edu
     <h1 id = "header-text">Nicholas Kim</h1>
     <ul id = "header-links">
       <li><a class = "hyperlinks" id = "current-page" href = "index.html">Home</a></li>
-      <li><a class = "hyperlinks" href = "pages/cv.html">Resume</a></li>
+      <li><a class = "hyperlinks" href = "pages/cv.html">CV</a></li>
       <li><a class = "hyperlinks" href = "pages/contact.html">Contact me</a></li>
     </ul>
   </header>
 
   <div id = "main-content">
-    <h2>Welcome</h2>
-    <img id = "pic" src = "images/selfie.jpg" alt = "Picture of me, Nicholas Kim">
-    <h4>About Me</h4>
-    <p>Hi! I'm Nicholas Kim, a 4th-year undergraduate Computer Science student at <em>University of California, Irvine</em>, graduating December 2022.</p>
+    <h2>Welcome! &#129312;</h2>
+    <img id = "pic" src = "images/selfie.jpg" alt = "Picture of me, Nicholas Kim at Disneyland">
+    <h3>About Me</h3>
+    <p>Hi! I'm Nick, a 4th-year undergraduate Computer Science student at <em>University of California, Irvine</em>, graduating December 2022.</p>
     <p>Currently, I'm taking a full-time student course load and am working part-time as a DevOps Software Engineering Intern at <a href = "https://www.dhl.com/us-en/home/ecommerce-solutions.html" target="_blank" rel="noopener noreferrer"> DHL eCommerce Solutions</a>. 
       After graduating I will be joining <a href = "https://www.palantir.com/" target="_blank" rel="noopener noreferrer">Palantir</a> fulltime as a Product Reliability Engineer. I'm not currently looking for any work, 
       but if you have any cool or unique opportunities or if you would like to chat, feel free to contact me <a href = "pages/contact.html">here</a>.
