--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,9 +10,9 @@ EMAIL: nichok3@uci.edu
   <meta charset="utf-8">
   <meta name="author" content="Nicholas Kim">
   <meta name="description" content="CV">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="icon" href="../images/cat_favicon.png" type="image/icon type">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
+  <link rel="stylesheet" type="text/css" href="../css/header.css">
+  <link rel="icon" href="../images/cat_favicon.png">
   <title>Nicholas Kim Contact</title>
 </head>
 <body>
@@ -20,7 +20,7 @@ EMAIL: nichok3@uci.edu
     <h1 id = "header-text">Nicholas Kim</h1>
     <ul id = "header-links">
       <li><a class = "hyperlinks" href = "../index.html">Home</a></li>
-      <li><a class = "hyperlinks" href = "cv.html">Resume</a></li>
+      <li><a class = "hyperlinks" href = "cv.html">CV</a></li>
       <li><a class = "hyperlinks" id = "current-page" href = "contact.html">Contact me</a></li>
     </ul>
   </header>
